--- a/src/pages/example.mdx
+++ b/src/pages/example.mdx
@@ -2,7 +2,7 @@
 title: Cómo jugar;
 ---
 import { ClientOnly } from 'astro/client'
-import clickExample from '../components/clickExample.tsx'
+import ClickExample from '../components/ClickExample.tsx'
 
 # 🕹️ Cómo jugar
 
@@ -10,7 +10,7 @@ Este es un juego tipo *clicker*. Tu objetivo es ganar la mayor cantidad de diner
 
 ## 👉 Paso 1: Haz clic
 
-<clickExample client:only="react" />
+<ClickExample client:load/>
 
 ## 🚀 Paso 2: Compra mejoras
 
